--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-eslint": "^0.13.2",
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.2.1",
+    "gulp-inject": "^2.2.0",
     "gulp-jade": "^1.1.0",
     "gulp-load-plugins": "^0.10.0",
     "gulp-minify-css": "^1.1.1",
@@ -27,6 +28,7 @@
     "jade": "^1.11.0",
     "main-bower-files": "^2.5.0",
     "opn": "^1.0.1",
+    "require-dir": "^0.3.0",
     "wiredep": "^2.2.2"
   },
   "eslintConfig": {
