--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "main-bower-files": "^2.5.0",
     "opn": "^1.0.1",
     "require-dir": "^0.3.0",
+    "run-sequence": "^1.1.0",
     "wiredep": "^2.2.2"
   },
   "eslintConfig": {
