--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-stylus": "^2.0.7",
     "gulp-uglify": "^1.1.0",
     "gulp-useref": "^1.1.1",
+    "gulp-webpack": "^1.5.0",
     "jade": "^1.11.0",
     "main-bower-files": "^2.5.0",
     "opn": "^1.0.1",
