--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "opn": "^1.0.1",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.0",
+    "webpack": "^1.12.2",
     "wiredep": "^2.2.2"
   },
   "eslintConfig": {
